# RPG-Game

./: .gitignore  CLAUDE.md  MEMORY.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/.omc/: project-memory.json
backend/.omc/state/: agent-replay-14d46bfe-6c3c-47c1-b905-3559a39125ee.jsonl  agent-replay-5e1d166e-6063-46a4-a8fa-82d05c7fff74.jsonl  agent-replay-6ec8e45a-becd-4169-ad12-3a7a958604e3.jsonl  agent-replay-aff550e2-c144-4d83-ab87-ea8e8b2fdd47.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
backend/.omc/state/checkpoints/: checkpoint-2026-06-22T17-15-36-700Z.json  checkpoint-2026-06-24T17-38-39-587Z.json  checkpoint-2026-06-25T05-04-47-324Z.json  checkpoint-2026-06-25T11-18-56-866Z.json  (+6 more)
backend/app/: config.py  main.py
backend/app/api/: state.py  talk.py  world.py
backend/app/graph/: build.py  nodes.py  state.py
backend/app/memory/: sqlite_store.py  stream.py  vector_store.py
backend/app/serving/: llm.py
backend/app/tools/: gates.py  schemas.py
backend/data/: seed_lore_claude.py
backend/data/personas/: shopkeeper.md
backend/eval/: judge.py  run_ablation.py  s5_manual_test.md  s6_manual_test.md  s7_manual_test.md  s8_ablation_run1.md  s8_ablation_run2.md
backend/eval/dataset/: ablation_cases.json
backend/tests/: conftest.py  test_gate_disposition.py  test_gate_reward.py  test_reflection_s7.py  test_s9_routing.py  test_stream_s6.py  test_subsystems.py  test_talk_checkpoint_s4.py  test_talk_lore_s5.py  test_talk_recall_s3.py  test_talk_s0.py  test_talk_state_s1.py  test_vector_store.py  test_vector_store_lore.py
docs/: README.md
(+64 files in other folders)
