[project]
name = "npc-agent-service"
version = "0.1.0"
description = "Stateful, tool-using LLM NPCs for an RPG"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "langchain-groq>=0.1.6",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "chromadb>=0.5.0",
    "lightrag-hku>=1.5.4",
    "openai>=2.43.0",
    "anthropic>=0.111.0",
    "pyvis>=0.3.2",
    "fastembed>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
